@@ -1,4 +1,5 @@
 
+  * In Player Playlist selection is cancelled when new playlist is set
   * Added support to ape file format.
   * Added support to mp4 using libmp4 library. Need libmp4v2 installed
   * Added column genre to songs list box
